# f1-packets

./: LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: release.yaml  tests.yaml
data/: spec.h
f1/: handler.py  listener.py  packets.py
scripts/: genspec.py  recorder.py
test/: packets.pickle  test_packets.py  utils.py
