[tool.poetry]
name = "f1-packets"
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
description = "Python library for the official F1 game UDP telemetry data"
authors = ["Gabriele N. Tornetta <phoenix1987@gmail.com>"]
license = "MIT"
packages = [
  {include = "f1"},
]
readme = "README.md"
repository = "https://github.com/P403n1x87/f1-packets"
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.urls]
issues = "https://github.com/P403n1x87/f1-packets/issues"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry_core>=1.0", "poetry-dynamic-versioning"]